[package]
name = "netlink-packet-utils"
version = "0.6.0"
authors = ["Corentin Henry <corentinhenry@gmail.com>"]
edition = "2018"
homepage = "https://github.com/rust-netlink/netlink-packet-utils"
repository = "https://github.com/rust-netlink/netlink-packet-utils"
license = "MIT"
description = "macros and helpers for parsing netlink messages"
readme = "README.md"

[features]
serde = ["dep:serde"]

[dependencies]
byteorder = "1.3.2"
pastey = "0.1.0"
serde = { version = "1", features = ["derive"], optional = true }
thiserror = "2"
